--- a/Halloapp/el.lproj/Localizable.strings
+++ b/Halloapp/el.lproj/Localizable.strings
@@ -58,8 +58,7 @@
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
 "button.add" = "Πρόσθεση";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Άκυρο";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
@@ -143,12 +142,6 @@
 /* Text shown at the top of the chat screen for contacts not in the user's address book that say the contact can be added to the address book */
 "chat.add.to.contacts.book.label" = "Για να δείτε δημοσιεύσεις από %@ προσθέστε τον αριθμό τους στο βιβλίο επαφών σας. Πατήστε για προσθήκη";
 
-/* Placeholder text shown inside the group name input box when it's empty */
-"chat.create.group.name.placeholder" = "Oνομάστε την ομάδα";
-
-/* Title of group creation screen */
-"chat.create.group.title" = "Πληροφορίες Ομάδας";
-
 /* Label for creating a new group */
 "chat.create.new.group" = "Δημιουργία Νέας Ομάδας";
 
@@ -157,9 +150,6 @@
 
 /* Text shown at the top of the chat screen informing the user that the chat is end-to-end encrypted */
 "chat.encryption.label" = "Οι συνομιλίες είναι κρυπτογραφημένες και το HalloApp δεν έχει πρόσβαση σε αυτές. Πατήστε για να μάθετε περισσότερα.";
-
-/* Label shown above background selection row */
-"chat.group.background.label" = "ΦΟΝΤΟ";
 
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "Ο χρήστης %@ μπήκε στην ομάδα μέσω συνδέσμου πρόσκλησης σε ομάδα";
@@ -211,9 +201,6 @@
 
 /* Confirmation message presented when leaving a group */
 "chat.group.leave.group.confirmation" = "Αποχώρηση από “%@”;";
-
-/* Label shown above group members list */
-"chat.group.members.label" = "ΜΕΛΗ";
 
 /* Label shown above group name input box */
 "chat.group.name.label" = "ΟΝΟΜΑ ΟΜΑΔΑΣ";
@@ -344,8 +331,7 @@
 /* Message requesting the user enable contacts permission */
 "contacts.permission.explanation" = "Για να σας βοηθήσουμε να συνδεθείτε με φίλους και συγγενείς, επιτρέψτε στο HalloApp την πρόσβαση στις επαφές σας.";
 
-/* Title for modal view when showing how to change contact permissions.
-   Title for tutorial explaining how user can enable contacts permission */
+/* Title for tutorial explaining how user can enable contacts permission */
 "contacts.permission.tutorial.title" = "Επαφές";
 
 /* Alert message telling the user to try creating the group again after an error */
@@ -753,8 +739,7 @@
 /* New post notification text when post is multiple videos without caption. */
 "notification.n.videos" = "notification.n.videos";
 
-/* Content for contact notification.
-   Content for friend notification. */
+/* Content for friend notification. */
 "notification.new.friend.content" = "%@ είναι τώρα στο HalloApp";
 
 /* Fallback text for new message notification. */
@@ -826,8 +811,7 @@
 /* Message in media picker when selecting over limit. */
 "picker.media.n.limit" = "picker.media.n.limit";
 
-/* Displayed in place of a deleted feed post.
-   Displayed in place of a deleted group feed post at group list screen */
+/* Displayed in place of a deleted feed post. */
 "post.has.been.deleted" = "H δημοσίευση διαγράφηκε";
 
 /* Displayed in place of a deleted feed post. */
