--- a/HalloAppClip/es.lproj/Localizable.strings
+++ b/HalloAppClip/es.lproj/Localizable.strings
@@ -7,8 +7,7 @@
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
 "button.add" = "Añadir";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Cancelar";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
