--- a/HalloAppClip/ru.lproj/Localizable.strings
+++ b/HalloAppClip/ru.lproj/Localizable.strings
@@ -4,8 +4,7 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Проверьте, есть ли у вас интернет-подключение, и повторите попытку.";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Отмена";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
