--- a/HalloAppClip/tr.lproj/Localizable.strings
+++ b/HalloAppClip/tr.lproj/Localizable.strings
@@ -4,8 +4,7 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Lütfen internet bağlantını kontrol et ve yeniden dene.";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "İptal et";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
