--- a/Halloapp/cs.lproj/Localizable.strings
+++ b/Halloapp/cs.lproj/Localizable.strings
@@ -52,8 +52,7 @@
 /* Text to show on banner when no connection is available */
 "banner.no.connection" = "Žádné internetové připojení";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Zrušit";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
@@ -137,12 +136,6 @@
 /* Text shown at the top of the chat screen for contacts not in the user's address book that say the contact can be added to the address book */
 "chat.add.to.contacts.book.label" = "Pokud chcete zobrazit příspěvky od uživatele %@, přidejte jeho číslo do svého seznamu kontaktů.  Přidejte klepnutím";
 
-/* Placeholder text shown inside the group name input box when it's empty */
-"chat.create.group.name.placeholder" = "Pojmenujte svoji skupinu";
-
-/* Title of group creation screen */
-"chat.create.group.title" = "Informace o skupině";
-
 /* Label for creating a new group */
 "chat.create.new.group" = "Vytvořit novou skupinu";
 
@@ -151,9 +144,6 @@
 
 /* Text shown at the top of the chat screen informing the user that the chat is end-to-end encrypted */
 "chat.encryption.label" = "Chaty jsou komplexně šifrovány a HalloApp k nim nemá přístup. Další informace zobrazíte klepnutím.";
-
-/* Label shown above background selection row */
-"chat.group.background.label" = "POZADÍ";
 
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "%@ se přidal(a) ke skupině přes skupinový zvací odkaz";
@@ -205,9 +195,6 @@
 
 /* Confirmation message presented when leaving a group */
 "chat.group.leave.group.confirmation" = "Opustit “%@”?";
-
-/* Label shown above group members list */
-"chat.group.members.label" = "ČLENOVÉ";
 
 /* Label shown above group name input box */
 "chat.group.name.label" = "NÁZEV SKUPINY";
@@ -347,8 +334,7 @@
 /* Message requesting the user enable contacts permission */
 "contacts.permission.explanation" = "Aby vám HalloApp mohla pomoci spojit se s přáteli a rodinou, povolte jí přístup k vašim kontaktům.";
 
-/* Title for modal view when showing how to change contact permissions.
-   Title for tutorial explaining how user can enable contacts permission */
+/* Title for tutorial explaining how user can enable contacts permission */
 "contacts.permission.tutorial.title" = "Kontakty";
 
 /* Alert message telling the user to try creating the group again after an error */
@@ -756,8 +742,7 @@
 /* New post notification text when post is multiple videos without caption. */
 "notification.n.videos" = "notification.n.videos";
 
-/* Content for contact notification.
-   Content for friend notification. */
+/* Content for friend notification. */
 "notification.new.friend.content" = "%@ je nyní na HalloApp";
 
 /* Fallback text for new message notification. */
@@ -832,8 +817,7 @@
 /* Message in media picker when selecting over limit. */
 "picker.media.n.limit" = "picker.media.n.limit";
 
-/* Displayed in place of a deleted feed post.
-   Displayed in place of a deleted group feed post at group list screen */
+/* Displayed in place of a deleted feed post. */
 "post.has.been.deleted" = "Tento příspěvek byl smazán";
 
 /* Displayed in place of a deleted feed post. */
