--- a/Halloapp/es.lproj/Localizable.strings
+++ b/Halloapp/es.lproj/Localizable.strings
@@ -58,8 +58,7 @@
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
 "button.add" = "Añadir";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Cancelar";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
@@ -143,12 +142,6 @@
 /* Text shown at the top of the chat screen for contacts not in the user's address book that say the contact can be added to the address book */
 "chat.add.to.contacts.book.label" = "Para ver publicaiones de %@, añade su número de teléfono a tu agenda. Toca para agregar";
 
-/* Placeholder text shown inside the group name input box when it's empty */
-"chat.create.group.name.placeholder" = "Dale un nombre a tu grupo";
-
-/* Title of group creation screen */
-"chat.create.group.title" = "Información del grupo";
-
 /* Label for creating a new group */
 "chat.create.new.group" = "Crear un grupo nuevo";
 
@@ -157,9 +150,6 @@
 
 /* Text shown at the top of the chat screen informing the user that the chat is end-to-end encrypted */
 "chat.encryption.label" = "Las conversaciones están encriptadas de extremo a extremo y HalloApp no tiene acceso a ellas. Toca para saber más.";
-
-/* Label shown above background selection row */
-"chat.group.background.label" = "FONDO DE PANTALLA";
 
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "%@ se unió al grupo con el enlace de invitación";
@@ -211,9 +201,6 @@
 
 /* Confirmation message presented when leaving a group */
 "chat.group.leave.group.confirmation" = "¿Abandonar \"%@\"?";
-
-/* Label shown above group members list */
-"chat.group.members.label" = "PARTICIPANTES";
 
 /* Label shown above group name input box */
 "chat.group.name.label" = "NOMBRE DEL GRUPO";
@@ -353,8 +340,7 @@
 /* Message requesting the user enable contacts permission */
 "contacts.permission.explanation" = "Para ayudarte a conectar con tus amigos y familiares, permite a HalloApp acceder a tus contactos.";
 
-/* Title for modal view when showing how to change contact permissions.
-   Title for tutorial explaining how user can enable contacts permission */
+/* Title for tutorial explaining how user can enable contacts permission */
 "contacts.permission.tutorial.title" = "Contactos";
 
 /* Alert message telling the user to try creating the group again after an error */
@@ -765,8 +751,7 @@
 /* New post notification text when post is multiple videos without caption. */
 "notification.n.videos" = "notification.n.videos";
 
-/* Content for contact notification.
-   Content for friend notification. */
+/* Content for friend notification. */
 "notification.new.friend.content" = "%@ ahora está en HalloApp";
 
 /* Fallback text for new message notification. */
@@ -841,8 +826,7 @@
 /* Message in media picker when selecting over limit. */
 "picker.media.n.limit" = "picker.media.n.limit";
 
-/* Displayed in place of a deleted feed post.
-   Displayed in place of a deleted group feed post at group list screen */
+/* Displayed in place of a deleted feed post. */
 "post.has.been.deleted" = "Esta publicación ha sido eliminada";
 
 /* Displayed in place of a deleted feed post. */
