--- a/Halloapp/pt-br.lproj/Localizable.strings
+++ b/Halloapp/pt-br.lproj/Localizable.strings
@@ -52,8 +52,7 @@
 /* Text to show on banner when no connection is available */
 "banner.no.connection" = "Sem conexão de internet";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Cancelar";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
@@ -137,12 +136,6 @@
 /* Text shown at the top of the chat screen for contacts not in the user's address book that say the contact can be added to the address book */
 "chat.add.to.contacts.book.label" = "Para ver as publicações de %@ adicione o número dele(a) à sua lista de contatos. Toque para adicionar";
 
-/* Placeholder text shown inside the group name input box when it's empty */
-"chat.create.group.name.placeholder" = "Dê um nome ao seu grupo";
-
-/* Title of group creation screen */
-"chat.create.group.title" = "Informações do grupo";
-
 /* Label for creating a new group */
 "chat.create.new.group" = "Criar novo grupo";
 
@@ -151,9 +144,6 @@
 
 /* Text shown at the top of the chat screen informing the user that the chat is end-to-end encrypted */
 "chat.encryption.label" = "Os chats são criptografados de ponta a ponta e o HalloApp não tem acesso a eles. Toque para saber mais.";
-
-/* Label shown above background selection row */
-"chat.group.background.label" = "PLANO DE FUNDO";
 
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "%@ entrou no grupo através do link de convite de grupo";
@@ -205,9 +195,6 @@
 
 /* Confirmation message presented when leaving a group */
 "chat.group.leave.group.confirmation" = "Sair do “%@”?";
-
-/* Label shown above group members list */
-"chat.group.members.label" = "MEMBROS";
 
 /* Label shown above group name input box */
 "chat.group.name.label" = "NOME DO GRUPO";
@@ -338,8 +325,7 @@
 /* Message requesting the user enable contacts permission */
 "contacts.permission.explanation" = "Para ajudá-lo a se conectar com amigos e familiares, permita que o HalloApp acesse seus contatos.";
 
-/* Title for modal view when showing how to change contact permissions.
-   Title for tutorial explaining how user can enable contacts permission */
+/* Title for tutorial explaining how user can enable contacts permission */
 "contacts.permission.tutorial.title" = "Contatos";
 
 /* Alert message telling the user to try creating the group again after an error */
@@ -747,8 +733,7 @@
 /* New post notification text when post is multiple videos without caption. */
 "notification.n.videos" = "notificação.n.vídeos";
 
-/* Content for contact notification.
-   Content for friend notification. */
+/* Content for friend notification. */
 "notification.new.friend.content" = "%@ está agora no HalloApp";
 
 /* Fallback text for new message notification. */
@@ -820,8 +805,7 @@
 /* Message in media picker when selecting over limit. */
 "picker.media.n.limit" = "seletor.mídia.n.limite";
 
-/* Displayed in place of a deleted feed post.
-   Displayed in place of a deleted group feed post at group list screen */
+/* Displayed in place of a deleted feed post. */
 "post.has.been.deleted" = "Esta postagem foi excluída";
 
 /* Displayed in place of a deleted feed post. */
