--- a/Halloapp/ru.lproj/Localizable.strings
+++ b/Halloapp/ru.lproj/Localizable.strings
@@ -52,8 +52,7 @@
 /* Text to show on banner when no connection is available */
 "banner.no.connection" = "Нет подключения к Интернету";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Отмена";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
@@ -137,12 +136,6 @@
 /* Text shown at the top of the chat screen for contacts not in the user's address book that say the contact can be added to the address book */
 "chat.add.to.contacts.book.label" = "Чтобы увидеть сообщения от %@, добавьте номер в свою контактную книгу. Нажмите, чтобы добавить";
 
-/* Placeholder text shown inside the group name input box when it's empty */
-"chat.create.group.name.placeholder" = "Назовите свою группу";
-
-/* Title of group creation screen */
-"chat.create.group.title" = "Информация о группе";
-
 /* Label for creating a new group */
 "chat.create.new.group" = "Создать новую группу";
 
@@ -151,9 +144,6 @@
 
 /* Text shown at the top of the chat screen informing the user that the chat is end-to-end encrypted */
 "chat.encryption.label" = "Чаты зашифрованы сквозным шифрованием, и HalloApp не имеет к ним доступа. Нажмите, чтобы узнать больше.";
-
-/* Label shown above background selection row */
-"chat.group.background.label" = "ФОН";
 
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "%@ присоединился(-ась) к группе по ссылке-приглашению в группу";
@@ -205,9 +195,6 @@
 
 /* Confirmation message presented when leaving a group */
 "chat.group.leave.group.confirmation" = "Выйти из “%@”?";
-
-/* Label shown above group members list */
-"chat.group.members.label" = "УЧАСТНИКИ";
 
 /* Label shown above group name input box */
 "chat.group.name.label" = "НАЗВАНИЕ ГРУППЫ";
@@ -338,8 +325,7 @@
 /* Message requesting the user enable contacts permission */
 "contacts.permission.explanation" = "Чтобы HalloApp помогло тебе связаться с друзьями и семьей, предоставь доступ к своим контактам.";
 
-/* Title for modal view when showing how to change contact permissions.
-   Title for tutorial explaining how user can enable contacts permission */
+/* Title for tutorial explaining how user can enable contacts permission */
 "contacts.permission.tutorial.title" = "Контакты";
 
 /* Alert message telling the user to try creating the group again after an error */
@@ -747,8 +733,7 @@
 /* New post notification text when post is multiple videos without caption. */
 "notification.n.videos" = "notification.n.videos";
 
-/* Content for contact notification.
-   Content for friend notification. */
+/* Content for friend notification. */
 "notification.new.friend.content" = "%@ теперь пользуется HalloApp";
 
 /* Fallback text for new message notification. */
@@ -820,8 +805,7 @@
 /* Message in media picker when selecting over limit. */
 "picker.media.n.limit" = "picker.media.n.limit";
 
-/* Displayed in place of a deleted feed post.
-   Displayed in place of a deleted group feed post at group list screen */
+/* Displayed in place of a deleted feed post. */
 "post.has.been.deleted" = "Этот пост был удален";
 
 /* Displayed in place of a deleted feed post. */
