--- a/Notification Service Extension/el.lproj/Localizable.strings
+++ b/Notification Service Extension/el.lproj/Localizable.strings
@@ -7,8 +7,7 @@
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
 "button.add" = "Πρόσθεση";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Ακύρωση";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
@@ -86,8 +85,7 @@
 /* New post notification text when post is multiple videos without caption. */
 "notification.n.videos" = "ειδοποίηση βίντεο";
 
-/* Content for contact notification.
-   Content for friend notification. */
+/* Content for friend notification. */
 "notification.new.friend.content" = "%@ είναι τώρα στο HalloApp";
 
 /* Fallback text for new message notification. */
