--- a/Notification Service Extension/fa.lproj/Localizable.strings
+++ b/Notification Service Extension/fa.lproj/Localizable.strings
@@ -7,9 +7,11 @@
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
 "button.add" = "افزودن";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "لغو";
+
+/* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel.capitalized" = "لغو";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "ادامه";
@@ -86,8 +88,13 @@
 /* New post notification text when post is multiple videos without caption. */
 "notification.n.videos" = "notification.n.videos";
 
-/* Content for contact notification.
-   Content for friend notification. */
+/* Title for the new comment notification. */
+"notification.new.comment" = "نظر جدید";
+
+/* Content for contact notification. */
+"notification.new.contact.content" = "%@ در حال حاضر در هالواپ است";
+
+/* Content for friend notification. */
 "notification.new.friend.content" = "%@ به هالواپ پیوست";
 
 /* Fallback text for new message notification. */
