--- a/Notification Service Extension/nl.lproj/Localizable.strings
+++ b/Notification Service Extension/nl.lproj/Localizable.strings
@@ -2,17 +2,19 @@
 "alert.no.internet.title" = "Geen internetverbinding";
 
 /* Message to tell the user to try again when they have internet connectivity again */
-"alert.no.internet.try.again" = "Controleer je internetverbinding en probeer opnieuw.";
+"alert.no.internet.try.again" = "Controleer of je internetverbinding hebt en probeer opnieuw.";
 
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
 "button.add" = "Toevoegen";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Annuleren";
 
+/* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel.capitalized" = "ANNULEREN";
+
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
-"button.continue" = "Doorgan";
+"button.continue" = "Doorgaan";
 
 /* Title for generic Create button */
 "button.create" = "Aanmaken";
@@ -75,17 +77,28 @@
 "notification.commented.with.text" = "Gereageerd: %@";
 
 /* Content for unknown contact notification. */
-"notification.contact.unknown.content" = "Eén van je contacten is nu op HalloApp";
+"notification.contact.unknown.content" = "Eén van je contacten gebruikt nu HalloApp";
 
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ heeft je uitnodiging voor HalloApp geaccepteerd 🎉";
 
-/* Content for contact notification.
-   Content for friend notification. */
-"notification.new.friend.content" = "%@ is nu op HalloApp";
+/* New post notification text when post is multiple photos without caption. */
+"notification.n.photos" = "notification.n.photos";
+
+/* New post notification text when post is multiple videos without caption. */
+"notification.n.videos" = "notification.n.videos";
+
+/* Title for the new comment notification. */
+"notification.new.comment" = "Nieuwe Reactie";
+
+/* Content for contact notification. */
+"notification.new.contact.content" = "%@ gebruikt nu HalloApp";
+
+/* Content for friend notification. */
+"notification.new.friend.content" = "%@ gebruikt nu HalloApp";
 
 /* Fallback text for new message notification. */
-"notification.new.message" = "Nieuw bericht";
+"notification.new.message" = "Nieuw Bericht";
 
 /* Title for the new feed post notification. */
 "notification.new.post" = "Nieuwe Post";
