--- a/Notification Service Extension/pt-br.lproj/Localizable.strings
+++ b/Notification Service Extension/pt-br.lproj/Localizable.strings
@@ -4,8 +4,7 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Verifique se você tem conexão com a internet, em seguida, tente novamente";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Cancelar";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
@@ -83,8 +82,7 @@
 /* New post notification text when post is multiple videos without caption. */
 "notification.n.videos" = "notification.n.videos";
 
-/* Content for contact notification.
-   Content for friend notification. */
+/* Content for friend notification. */
 "notification.new.friend.content" = "%@ está agora no HalloApp";
 
 /* Fallback text for new message notification. */
