--- a/Share Extension/fa.lproj/Localizable.strings
+++ b/Share Extension/fa.lproj/Localizable.strings
@@ -7,9 +7,11 @@
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
 "button.add" = "افزودن";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "لغو";
+
+/* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel.capitalized" = "لغو";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "ادامه";
@@ -86,8 +88,10 @@
 /* Composer title when sharing to feed */
 "share.composer.title.feed" = "پست جدید";
 
-/* Alert dialog message shown when uploading fails.
-   Alert dialog title shown when uploading fails. */
+/* Alert dialog message shown when uploading fails. */
+"share.composer.uploading.fail.message" = "لطفاً بعداً امتحان کنید.";
+
+/* Alert dialog title shown when uploading fails. */
 "share.composer.uploading.fail.title" = "خطا در بارگذاری";
 
 /* Alert dialog title shown when uploading begins. */
