--- a/Share Extension/fr.lproj/Localizable.strings
+++ b/Share Extension/fr.lproj/Localizable.strings
@@ -7,8 +7,7 @@
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
 "button.add" = "Ajouter";
 
-/* Title for generic Cancel button. Mostly used in popups and as such.
-   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+/* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Annuler";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
@@ -86,8 +85,7 @@
 /* Composer title when sharing to feed */
 "share.composer.title.feed" = "Nouvelle publication";
 
-/* Alert dialog message shown when uploading fails.
-   Alert dialog title shown when uploading fails. */
+/* Alert dialog title shown when uploading fails. */
 "share.composer.uploading.fail.title" = "Échec du téléchargement";
 
 /* Alert dialog title shown when uploading begins. */
